[gd_scene load_steps=17 format=3 uid="uid://uh4eq1vcwk0d"]

[ext_resource type="Script" uid="uid://ta6jm3o702cd" path="res://Scripts/state_machine.gd" id="1_0tgwv"]
[ext_resource type="Script" uid="uid://cuhnm8jpqxehi" path="res://character/Player/player.gd" id="1_notwl"]
[ext_resource type="Script" uid="uid://dxunrp0anyttl" path="res://character/Player/camera_rig.gd" id="2_wqlwt"]
[ext_resource type="ArrayMesh" uid="uid://k1ijyptxd7bb" path="res://character/Player/assets/pc.obj" id="3_j6nh0"]
[ext_resource type="Script" uid="uid://dy082el4bv651" path="res://character/Player/scripts/PlayerMovement.gd" id="3_xpie8"]
[ext_resource type="Script" uid="uid://d2wq8wermq0j5" path="res://character/Player/scripts/playerIdle.gd" id="4_6l1bn"]
[ext_resource type="Script" uid="uid://cmhb34nwphwvq" path="res://character/Player/scripts/PlayerDash.gd" id="7_88v7q"]
[ext_resource type="Script" uid="uid://ync7yubtn88w" path="res://Scripts/movementstatecontroller.gd" id="7_rddrj"]
[ext_resource type="PackedScene" uid="uid://djqmcmi40ihmm" path="res://scenes/health.tscn" id="7_ux05m"]
[ext_resource type="Script" uid="uid://coqwi58civkx5" path="res://character/Player/scripts/PlayerDead.gd" id="8_6rf8t"]
[ext_resource type="Script" uid="uid://qec70biu6pvt" path="res://Scripts/hitbox.gd" id="8_ux05m"]
[ext_resource type="Script" uid="uid://fl22xgefux05" path="res://Scripts/hurtbox.gd" id="9_1p0ae"]

[sub_resource type="BoxShape3D" id="BoxShape3D_88v7q"]
size = Vector3(1.04602, 0.268738, 0.518265)

[sub_resource type="SphereShape3D" id="SphereShape3D_r3tt1"]
radius = 0.159938

[sub_resource type="SphereShape3D" id="SphereShape3D_1p0ae"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_rddrj"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("groundcheck") groups=["Player", "entity"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("1_notwl")
groundcheck = NodePath("GroundCkeck")

[node name="CameraRig" type="Node3D" parent="." node_paths=PackedStringArray("head", "player")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
top_level = true
script = ExtResource("2_wqlwt")
head = NodePath(".")
player = NodePath("..")

[node name="Camera_Target" type="Node3D" parent="CameraRig"]
transform = Transform3D(1, 0, 0, 0, 0.920484, 0.390779, 0, -0.390779, 0.920484, 0, 3.30138, 5.19027)

[node name="Camera3D" type="Camera3D" parent="CameraRig/Camera_Target"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -1.49012e-08, 0.376679)
current = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = ExtResource("3_j6nh0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00324923, 0.00211334, -0.00674105)
shape = SubResource("BoxShape3D_88v7q")

[node name="MovementStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_0tgwv")
initial_state = NodePath("idle")

[node name="StateInputWatcher" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("player", "state_manager")]
script = ExtResource("7_rddrj")
player = NodePath("../..")
state_manager = NodePath("..")

[node name="move" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("player", "head")]
script = ExtResource("3_xpie8")
player = NodePath("../..")
move_speed = 20.0
head = NodePath("../../CameraRig")
metadata/_custom_type_script = "uid://dy082el4bv651"

[node name="idle" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("4_6l1bn")
player = NodePath("../..")
metadata/_custom_type_script = "uid://d2wq8wermq0j5"

[node name="dash" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("player", "Camera_target")]
script = ExtResource("7_88v7q")
player = NodePath("../..")
Camera_target = NodePath("../../CameraRig")
dash_speed = 50.0
metadata/_custom_type_script = "uid://cmhb34nwphwvq"

[node name="dead" type="Node" parent="MovementStateMachine"]
script = ExtResource("8_6rf8t")
metadata/_custom_type_script = "uid://coqwi58civkx5"

[node name="AttackStateMachine" type="Node" parent="."]
script = ExtResource("1_0tgwv")

[node name="GroundCkeck" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0518138, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="GroundCkeck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.265861, 0.0667069, 0)
shape = SubResource("SphereShape3D_r3tt1")

[node name="Health" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("7_ux05m")]
offset_left = 14.0
offset_top = 15.0
offset_right = 257.0
offset_bottom = 24.0
parent = NodePath("..")

[node name="MyHitBox" type="Area3D" parent="." node_paths=PackedStringArray("parent")]
collision_layer = 2
collision_mask = 0
script = ExtResource("8_ux05m")
parent = NodePath("..")
damage = 5
metadata/_custom_type_script = "uid://qec70biu6pvt"

[node name="CollisionShape3D" type="CollisionShape3D" parent="MyHitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0875775, 0, 0.634084)
shape = SubResource("SphereShape3D_1p0ae")

[node name="MyHurtBox" type="Area3D" parent="." node_paths=PackedStringArray("parent")]
collision_layer = 0
script = ExtResource("9_1p0ae")
parent = NodePath("..")
metadata/_custom_type_script = "uid://fl22xgefux05"

[node name="CollisionShape3D" type="CollisionShape3D" parent="MyHurtBox"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("SphereShape3D_rddrj")

[connection signal="request_state_change" from="MovementStateMachine/StateInputWatcher" to="MovementStateMachine" method="_on_input_watcher_request_state_change"]
